--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
